# DataDog

./: .gitignore  ACTION_PLAN.md  ARCHITECTURE_ANALYSIS_REPORT.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  SECURITY_FIXES.md  alembic.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
course/course_1/: Course-1_ChatGPT-Data_analyst  course-1-module-1-complete.md  course-1-module-2-complete.md  course-1-module-3-complete.md  course-1-module-4-complete.md
course/course_2/: course-2-complete.md  course_2-chatGPT  course_2-gemini-modules-Data_analyst.md
course/course_2/Course2_Assets/: LICENSE.txt  README.md
course/course_2/Course2_Assets/C2-M1/: question_backlog_template.csv  question_backlog_template.xlsx  stakeholder_interview_guide.md
course/course_2/Course2_Assets/C2-M2/: before_after_sales.csv  deck_outline_template.md  narrative_headline_examples.md  visual_integrity_checklist.md
course/course_2/Course2_Assets/item_banks/: course2_item_bank.csv  course2_item_bank.json  course2_mcq_bank_qti12.xml
course/course_3/: .course_3-chatGPT-Data_analyst-interactive.kate-swp  course-3-perplexity-Data_analyst.md  course_3-chatGPT-Data_analyst  course_3-chatGPT-Data_analyst-interactive
course/course_3/Course3_Assets/: README.md
course/course_3/Course3_Assets/item_banks/: course3_item_bank.csv  course3_item_bank.json  course3_mcq_bank_qti12.xml
course/course_3/Course3_Assets/module3.1/: Customers.csv  Orders.csv  data_dictionary_template.md
docs/: api_reference.md  architecture.md  deployment.md  metadata_store.md  postgresql_metadata_store.md  user_guide.md
examples/: pipeline_config.yaml  simple_pipeline.py
src/datadog_platform/: __init__.py
src/datadog_platform/api/: server.py
src/datadog_platform/cli/: __init__.py  main.py
src/datadog_platform/connectors/: __init__.py  cloud_storage_connector.py  factory.py  file_connector.py  message_queue_connector.py  nosql_connector.py  postgresql_connector.py  rest_connector.py  sql_connector.py
src/datadog_platform/core/: __init__.py  base.py  data_source.py  executor.py  pipeline.py  reliability.py  transformation.py
src/datadog_platform/monitoring/: __init__.py  health.py
src/datadog_platform/orchestration/: __init__.py  metadata_service.py
src/datadog_platform/processing/: __init__.py
src/datadog_platform/storage/: __init__.py  config.py  create_db.py  database.py  models.py  postgres_metadata_store.py
src/datadog_platform/utils/: __init__.py  asyncio.py  security.py
src/datadog_platform/workers/: __init__.py  main.py
tests/unit/: test_connectors.py  test_data_source.py  test_health_monitoring.py  test_metadata_service.py  test_new_connectors.py  test_pipeline.py  test_postgres_metadata_store.py  test_reliability.py  test_security.py
(+12 files in other folders)
